xml/src1/objects/Meetings__c.object
<CustomObject>
    <description>To track the Meetings Contact attended</description>
    <fields>
        <fullName>Attendance__c</fullName>
        <description>Attendance</description>
        <label>Attendance</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended portion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Interview_Session__c</fullName>
        <description>Interview Session</description>
        <inlineHelpText>For UMEA only</inlineHelpText>
        <label>Interview Session</label>
        <picklist>
            <controllingField>Meeting_Type__c</controllingField>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Session 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Session 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Session 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invited_Date__c</fullName>
        <description>Invited Date</description>
        <label>Invited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Location__c</fullName>
        <description>Meeting Location</description>
        <label>Meeting Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Name__c</fullName>
        <description>Meeting Name</description>
        <label>Meeting Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Type_Other_Specify__c</fullName>
        <description>Meeting Type Other Specify</description>
        <label>Meeting Type(Other/Specify)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <description>Meeting Type</description>
        <label>Meeting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Chaplain Convocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chaplain Endorsement Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chaplain Continuing Education Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-to-One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBHEM Board Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deacon Formation Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deacon Provisional Retreat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other/Specify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting_Year__c</fullName>
        <description>Meeting Year</description>
        <label>Meeting Year</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason</description>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply__c</fullName>
        <label>Reply</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Will attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Meetings</label>
    <nameField>
        <displayFormat>Meet-{00000000}</displayFormat>
        <label>Meeting ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MeetingType_NOT_MeetingTypeOtherSpecify</fullName>
        <active>true</active>
        <description>If Meeting Type is not &apos;Other/Specify&apos; then Metting Type(Other/Specify) Should not contain a value</description>
        <errorConditionFormula>AND(NOT( ISPICKVAL(   Meeting_Type__c   ,&quot;Other/Specify&quot;)) ,NOT( ISBLANK(  Meeting_Type_Other_Specify__c ) ))</errorConditionFormula>
        <errorDisplayField>Meeting_Type_Other_Specify__c</errorDisplayField>
        <errorMessage>&apos;Meeting Type(Other/Specify)&apos; may not contain a value if Meeting Type is NOT &apos;Other/Specify&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MeetingType_OtherSpecify</fullName>
        <active>true</active>
        <description>If the &apos;Meeting Type&apos; is &apos;Others/Specify&apos; .Then user should enter a value in the &apos;Meeting Type Other specify&apos;</description>
        <errorConditionFormula>AND( ISPICKVAL(   Meeting_Type__c   ,&quot;Other/Specify&quot;) , ISBLANK(   Meeting_Type_Other_Specify__c   ) )</errorConditionFormula>
        <errorDisplayField>Meeting_Type_Other_Specify__c</errorDisplayField>
        <errorMessage>&apos;Meeting Type(Other/Specify)&apos; may contain a value if Meeting Type is &apos;Other/Specify&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Meeting_Reply_NOT_WillnotAttend</fullName>
        <active>true</active>
        <description>If Meeting Reply is Not Will Not Attend,Then Reason should not have value</description>
        <errorConditionFormula>AND(NOT( ISPICKVAL(  Reply__c  ,&quot;Will Not Attend&quot;)) ,NOT( ISBLANK(  Reason__c  ) ))</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>Reason may only contain a value when the reply is &quot;Will Not Attend</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Meeting_Reply_WillnotAttend</fullName>
        <active>true</active>
        <description>if Reply equals Will Not Attend,then Reason should be entered</description>
        <errorConditionFormula>AND( ISPICKVAL( Reply__c  ,&quot;Will Not Attend&quot;) , ISBLANK(  Reason__c  ) )</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>Reason may only contain a value when the reply is &quot;Will Not Attend</errorMessage>
    </validationRules>
</CustomObject>